# eq2-parser

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md  build.rs
.github/workflows/: release.yml
assets/: mechanics.json  spells.json  triggers_pack.json
docs/: optimisation.md
examples/: gen_icon.rs  import_act.rs  mine_mechanics.rs  opt_report.rs  parse_file.rs
src/: act_import.rs  combat.rs  config.rs  export.rs  history.rs  main.rs  mechanics.rs  optimizer.rs  parser.rs  tailer.rs  template.rs  triggers.rs  ui.rs  update.rs
tools/: extract_spells.py
