[package]
name = "eq2-tools"
version = "0.1.0"
edition = "2021"
description = "EverQuest II combat log parser with live DPS overlay (ACT-style)"

[dependencies]
eframe = "0.31"
egui_extras = "0.31"
egui_plot = "0.32"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rodio = "0.19"
rfd = "0.15"
image = { version = "0.25", default-features = false, features = ["png"] }
tts = "0.26"
ureq = "2"

[profile.release]
lto = true
strip = true
opt-level = 3
